# EchoCAD

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  config.h.in  resources.qrc
cmake/: DownloadPython.cmake  setupPython.cmake
examples/: display.py
python/: openai_client.py
resources/: resources.aps  resources.qrc  resources.rc
resources/styles/: style.qss
resources/xmls/: box.xml
scripts/: module_loader.py  openai_client.py  svg_to_ico.py
src/: CMakeLists.txt  main.cpp
src/3d/: grid.cpp  grid.h  scene.cpp  scene.h
src/base/: AppModule.cpp  AppModule.h  application.h  document.cpp  document.h
src/binding/: CMakeLists.txt  pybind11_bindings.cpp
src/core/: .h  Document.cpp  Document.h  DocumentObject.cpp  DocumentObject.h  InteractiveContext.h  OcctEntity.cpp  OcctEntity.h  PythonInterpreter.cpp  PythonInterpreter.h  cadmodule.cpp  cadmodule.h  gptprocessor.cpp  gptprocessor.h  pybind11_bindings.cpp
src/gui/: DocumentTreeWidget.h  GlTools.cpp  GlTools.h  GuiApplication.h  GuiDocument.h  IJupyterItem.cpp  IJupyterItem.h  IJupyterWidget.cpp  IJupyterWidget.h  IOcctViewer.cpp  IOcctViewer.h  IOcctWidget.cpp  IOcctWidget.h  Manipulator.h  ModelController.cpp  ModelController.h  ModelEditor.cpp  ModelEditor.h  OcctGlTools.cpp  OcctGlTools.h  TOcafFunction_BoxDriver.cpp  TOcafFunction_BoxDriver.h  TOcafFunction_CutDriver.cpp  TOcafFunction_CutDriver.h  TOcafFunction_CylDriver.h  TOcaf_Application.cpp  TOcaf_Application.h  ViewCube.cpp  ViewCube.h  ilineedit.cpp  ilineedit.h  initializer.cpp  initializer.h  ioverlaywidget.cpp  ioverlaywidget.h  mainwindow.cpp  mainwindow.h  stylemanager.cpp  stylemanager.h  tree.h
src/helper/: Viewer.cpp  Viewer.h  ViewerInteractor.cpp  ViewerInteractor.h
src/tests/: itestwidget.cpp  itestwidget.h
swig/: CMakeLists.txt  config.i
swig/core/: cadmodule.i
swig/src/Temp/: Temp.cpp  Temp.h  Temp.i
swig/src/core/: cadmodule.i
tests/: CMakeLists.txt  testregexp.cpp
